--- a/index.html
+++ b/index.html
@@ -239,11 +239,14 @@
 		<footer class="footer">
 			<div class="input">
 				<input
-					type="text"
+					id="form"
+					type="email"
 					class="footer--input"
 					placeholder="Updates in your inbox..."
 				/>
-				<button class="footer--input--btn">Go</button>
+				<button for="form" type="submit" class="footer--input--btn">
+					Go
+				</button>
 			</div>
 			<nav class="footer--nav">
 				<ul class="footer--nav--ul">
