--- a/index.html
+++ b/index.html
@@ -37,14 +37,20 @@
 			<div class="header--container">
 				<div class="logo"><img src="images/logo.svg" alt="logo" /></div>
 				<nav class="nav">
-					<div class="hamburger">
+					<!-- <div class="hamburger">
 						<img
 							src="images/icon-hamburger.svg"
 							alt="nav icon"
 							class="hamburger"
 						/>
+					</div> -->
+					<div class="hamburger-icon" id="icon">
+						<div class="icon-1" id="a"></div>
+						<div class="icon-2" id="b"></div>
+						<div class="icon-3" id="c"></div>
+						<div class="clear"></div>
 					</div>
-					<ul class="nav--ul">
+					<ul class="nav--ul hidden">
 						<li class="nav--list--item">Pricing</li>
 						<li class="nav--list--item">Product</li>
 						<li class="nav--list--item">About Us</li>
