HTML errors solved

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
 
 				<div class="manage--functionality">
 					<div class="functionality track">
-						<h4 class="functionality--subheading">
+						<h3 class="functionality--subheading">
 							<span class="number">01</span>
-							<div class="background">
+							<span class="background">
 								Track company-wide progress
-							</div>
-						</h4>
+							</span>
+						</h3>
 
 						<p class="description size">
 							See how your day-to-day tasks fit into the wider
@@ -118,12 +118,12 @@
 						</p>
 					</div>
 					<div class="functionality reports">
-						<h4 class="functionality--subheading">
+						<h3 class="functionality--subheading">
 							<span class="number">02</span>
-							<div class="background">
+							<span class="background">
 								Advanced built-in reports
-							</div>
-						</h4>
+							</span>
+						</h3>
 
 						<p class="description size">
 							Set internal delivery estimates and track progress
@@ -133,12 +133,12 @@
 						</p>
 					</div>
 					<div class="functionality all-in-one">
-						<h4 class="functionality--subheading">
+						<h3 class="functionality--subheading">
 							<span class="number">03</span>
-							<div class="background">
+							<span class="background">
 								Everything you need in one place
-							</div>
-						</h4>
+							</span>
+						</h3>
 
 						<p class="description size">
 							Stop jumping from one service to another to
@@ -161,7 +161,7 @@
 								height="50"
 								class="avatar"
 							/>
-							<h5 class="name">Anisha Li</h5>
+							<h4 class="name">Anisha Li</h4>
 						</div>
 						<div class="testimonial">
 							<p class="testimonial--text size">
@@ -180,7 +180,7 @@
 								width="50"
 								height="50"
 							/>
-							<h5 class="name">Ali Bravo</h5>
+							<h4 class="name">Ali Bravo</h4>
 						</div>
 						<div class="testimonial">
 							<p class="testimonial--text">
@@ -199,7 +199,7 @@
 								width="50"
 								height="50"
 							/>
-							<h5 class="name">Richard Watts</h5>
+							<h4 class="name">Richard Watts</h4>
 						</div>
 						<div class="testimonial">
 							<p class="testimonial--text">
@@ -218,7 +218,7 @@
 								width="50"
 								height="50"
 							/>
-							<h5 class="name">Shanai Gough</h5>
+							<h4 class="name">Shanai Gough</h4>
 						</div>
 						<div class="testimonial">
 							<p class="testimonial--text">
@@ -245,29 +245,28 @@
 		<footer class="footer">
 			<div class="input">
 				<input
-					id="form"
 					type="email"
 					class="footer--input"
 					placeholder="Updates in your inbox..."
 				/>
-				<button for="form" type="submit" class="footer--input--btn">
-					Go
-				</button>
+				<button type="submit" class="footer--input--btn">Go</button>
 			</div>
 			<nav class="footer--nav">
-				<ul class="footer--nav--ul">
-					<div class="left">
+				<div class="left">
+					<ul class="footer--nav--ul">
 						<li class="footer--nav--item">Home</li>
 						<li class="footer--nav--item">Pricing</li>
 						<li class="footer--nav--item">Products</li>
 						<li class="footer--nav--item">About Us</li>
-					</div>
-					<div class="right">
+					</ul>
+				</div>
+				<div class="right">
+					<ul class="footer--nav--ul">
 						<li class="footer--nav--item">Careers</li>
 						<li class="footer--nav--item">Community</li>
 						<li class="footer--nav--item">Privacy Policy</li>
-					</div>
-				</ul>
+					</ul>
+				</div>
 			</nav>
 			<div class="social--media">
 				<img src="images/icon-facebook.svg" alt="facebook icon" />
